components/PostCard/PostCard.module.css
.postDetails {
    max-width: 60ch;
    padding: 1em 0;

    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 1em;
    line-height: 1.6;
    color: var(--text-primary);
}

.postDetails h3 {
    font-family: var(--font-primary);
    font-size: clamp(1.5rem, 2vw, 4rem);
    text-transform: capitalize;
}

.postDetails > a p {
    font-family: var(--font-primary);
    font-size: clamp(1.2rem, 1.5vw, 3rem);
}

.postDetails > p {
    color: var(--text-accent);
    font-family: var(--font-accent);
    font-size: clamp(0.8rem, 1.15vw, 1.5rem);
}

.featureImage {
    max-width: 100%;
}

@media only screen and (min-width: 1440px) {
    .postDetails {
        max-width: 120ch;
    }
}

